--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -19,6 +19,6 @@
       <span> {{ character.power }}</span>
     </div>
 
-    <button (click) = "onDelectCharacter(i)" class="btn btn-danger">X</button>
+    <button (click) = "onDelectCharacter(character.id)" class="btn btn-danger">X</button>
   </li>
 </ul>
